@@ -134,6 +134,7 @@ sub gst_network_config_wireless
 
   $essid = $$hash{"configuration"}{"essid"};
   $key   = $$hash{"configuration"}{"key"};
+  $key_type = $$hash{"configuration"}{"key_type"};
 
   if ($essid)
   {
@@ -142,7 +143,13 @@ sub gst_network_config_wireless
 
     $command .= " $dev";
     $command .= " essid '$essid'" if ($essid);
-    $command .= " key '$key'" if ($key);
+
+    if ($key)
+    {
+      $key = &gst_network_get_full_key ($key, $key_type);
+      $command .= " key '$key'" if ($key);
+    }
+
     &gst_file_run ($command);
   }
 }
@@ -3779,6 +3786,56 @@ sub gst_network_detect_essids
   return \@arr;
 }
 
+sub gst_network_get_wep_key_type
+{
+  my ($func) = shift @_;
+  my ($val);
+
+  $val = &$func (@_);
+
+  return undef if (!$val);
+  return "ascii" if ($val =~ /^s\:/);
+  return "hexadecimal";
+}
+
+sub gst_network_get_wep_key
+{
+  my ($func) = shift @_;
+  my ($val);
+
+  $val = &$func (@_);
+  $val =~ s/^s\://;
+
+  return $val;
+}
+
+sub gst_network_get_full_key
+{
+  my ($key, $key_type) = @_;
+
+  if ($key_type eq "ascii")
+  {
+    $key = "s:" . $key;
+  }
+
+  return $key;
+}
+
+sub gst_network_set_wep_key_type
+{
+  my ($key, $key_type, $func);
+
+  # seems kind of hackish, but we want to use distro
+  # specific saving functions, so we need to leave
+  # the args as variable as possible
+  $func = shift @_;
+  $key_type = pop @_;
+  $key = pop @_;
+
+  push @_, &gst_network_get_full_key ($key, $key_type);
+  &$func (@_);
+}
+
 # Set dist_map for your distro to "" if you don't want
 # loopback ensuring. See suse-7.0 entry for example.
 sub gst_network_ensure_loopback_interface
@@ -4456,7 +4513,8 @@ sub gst_network_get_interface_parse_table
            [ "network",            \&gst_parse_sh,      IFCFG, NETWORK ],
            [ "gateway",            \&gst_parse_sh,      IFCFG, GATEWAY ],
            [ "essid",              \&gst_parse_sh,      IFCFG, ESSID ],
-           [ "key",                \&gst_parse_sh,      IFCFG, KEY   ],
+           [ "key_type",           \&gst_network_get_wep_key_type, [ \&gst_parse_sh, IFCFG, KEY ]],
+           [ "key",                \&gst_network_get_wep_key,      [ \&gst_parse_sh, IFCFG, KEY ]],
            [ "remote_address",     \&gst_parse_sh,      IFCFG, REMIP ],
 #           [ "update_dns",         \&gst_network_pump_get_nodns, PUMP, "%dev%", "%bootproto%" ],
 #           [ "dns1",               \&gst_parse_sh,      IFCFG, DNS1 ],
@@ -4525,7 +4583,8 @@ sub gst_network_get_interface_parse_table
            [ "network",            \&gst_parse_sh,      IFCFG, NETWORK ],
            [ "gateway",            \&gst_parse_sh,      IFCFG, GATEWAY ],
            [ "essid",              \&gst_parse_sh,      IFCFG, WIRELESS_ESSID ],
-           [ "key",                \&gst_parse_sh,      IFCFG, WIRELESS_KEY ],
+           [ "key_type",           \&gst_network_get_wep_key_type, [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
+           [ "key",                \&gst_network_get_wep_key,      [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
            [ "remote_address",     \&gst_parse_sh,      IFCFG, REMIP ],
 #           [ "update_dns",         \&gst_network_pump_get_nodns, PUMP, "%dev%", "%bootproto%" ],
 #           [ "dns1",               \&gst_parse_sh,      IFCFG, DNS1 ],
@@ -4591,7 +4650,8 @@ sub gst_network_get_interface_parse_table
        [ "network",            \&gst_parse_sh,      IFCFG, NETWORK ],
        [ "gateway",            \&gst_parse_sh,      IFCFG, GATEWAY ],
        [ "essid",              \&gst_parse_sh,      IFCFG, ESSID ],
-       [ "key",                \&gst_parse_sh,      IFCFG, KEY   ],
+       [ "key_type",           \&gst_network_get_wep_key_type, [ \&gst_parse_sh, IFCFG, KEY ]],
+       [ "key",                \&gst_network_get_wep_key,      [ \&gst_parse_sh, IFCFG, KEY ]],
        [ "remote_address",     \&gst_parse_sh,      IFCFG, REMIP ],
 #       [ "update_dns",         \&gst_network_pump_get_nodns, PUMP, "%dev%", "%bootproto%" ],
 #       [ "dns1",               \&gst_parse_sh,      IFCFG, DNS1 ],
@@ -4654,7 +4714,8 @@ sub gst_network_get_interface_parse_table
            [ "network",            \&gst_parse_sh,      IFCFG, NETWORK ],
            [ "gateway",            \&gst_parse_sh,      IFCFG, GATEWAY ],
            [ "essid",              \&gst_parse_sh,      IFCFG, WIRELESS_ESSID ],
-           [ "key",                \&gst_parse_sh,      IFCFG, WIRELESS_KEY ],
+           [ "key_type",           \&gst_network_get_wep_key_type, [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
+           [ "key",                \&gst_network_get_wep_key,      [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
            [ "remote_address",     \&gst_parse_sh,      IFCFG, REMIP ],
 #           [ "update_dns",         \&gst_network_pump_get_nodns, PUMP, "%dev%", "%bootproto%" ],
 #           [ "dns1",               \&gst_parse_sh,      IFCFG, DNS1 ],
@@ -4718,7 +4779,8 @@ sub gst_network_get_interface_parse_table
        [ "network",            \&gst_parse_sh,      IFCFG, NETWORK ],
        [ "gateway",            \&gst_parse_sh,      IFCFG, GATEWAY ],
        [ "essid",              \&gst_parse_sh,      IFCFG, WIRELESS_ESSID ],
-       [ "key",                \&gst_parse_sh,      IFCFG, WIRELESS_KEY ],
+       [ "key_type",           \&gst_network_get_wep_key_type, [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
+       [ "key",                \&gst_network_get_wep_key,      [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
        [ "remote_address",     \&gst_parse_sh,      IFCFG, REMIP ],
 #       [ "update_dns",         \&gst_network_pump_get_nodns, PUMP, "%dev%", "%bootproto%" ],
 #       [ "dns1",               \&gst_parse_sh,      IFCFG, DNS1 ],
@@ -4782,8 +4844,9 @@ sub gst_network_get_interface_parse_table
            [ "broadcast",          \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "broadcast" ],
            [ "network",            \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "network" ],
            [ "gateway",            \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "gateway" ],
-           [ "essid",              \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "wireless_essid" ],
-           [ "key",                \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "wireless_key" ],
+           [ "essid",              \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "wireless[_-]essid" ],
+           [ "key_type",           \&gst_network_get_wep_key_type,       [ \&gst_parse_interfaces_option_str, INTERFACES, IFACE, "wireless[_-]key1?" ]],
+           [ "key",                \&gst_network_get_wep_key,            [ \&gst_parse_interfaces_option_str, INTERFACES, IFACE, "wireless[_-]key1?" ]],
            [ "remote_address",     \&gst_network_debian_parse_remote_address, [INTERFACES, IFACE]],
            [ "section",            \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "provider" ],
            [ "update_dns",         \&gst_network_check_type,            [IFACE, "modem", \&gst_parse_kw, PPP_OPTIONS, "usepeerdns" ]],
@@ -4837,7 +4900,8 @@ sub gst_network_get_interface_parse_table
            [ "network",            \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "network" ],
            [ "gateway",            \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "gateway" ],
            [ "essid",              \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "wireless[_-]essid" ],
-           [ "key",                \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "wireless[_-]key1?" ],
+           [ "key_type",           \&gst_network_get_wep_key_type,       [ \&gst_parse_interfaces_option_str, INTERFACES, IFACE, "wireless[_-]key1?" ]],
+           [ "key",                \&gst_network_get_wep_key,            [ \&gst_parse_interfaces_option_str, INTERFACES, IFACE, "wireless[_-]key1?" ]],
            [ "remote_address",     \&gst_network_debian_parse_remote_address, [INTERFACES, IFACE]],
            [ "section",            \&gst_parse_interfaces_option_str,    [INTERFACES, IFACE], "provider" ],
            [ "update_dns",         \&gst_network_check_type,            [IFACE, "(modem|isdn)", \&gst_parse_kw, PPP_OPTIONS, "usepeerdns" ]],
@@ -4913,7 +4977,8 @@ sub gst_network_get_interface_parse_table
        [ "netmask",            \&gst_parse_sh,                        IFCFG,   NETMASK        ],
        [ "remote_address",     \&gst_parse_sh,                        IFCFG,   REMOTE_IPADDR  ],
        [ "essid",              \&gst_parse_sh,                        IFCFG,   WIRELESS_ESSID ],
-       [ "key",                \&gst_parse_sh,                        IFCFG,   WIRELESS_KEY   ],
+       [ "key_type",           \&gst_network_get_wep_key_type,        [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
+       [ "key",                \&gst_network_get_wep_key,             [ \&gst_parse_sh, IFCFG, WIRELESS_KEY ]],
        [ "gateway",            \&gst_network_suse90_get_gateway,      ROUTE_CONF, "%address%", "%netmask%" ],
        [ "gateway",            \&gst_network_suse90_get_plip_gateway, ROUTE_CONF, "%remote_address%"       ],
        # Modem stuff goes here
@@ -5011,7 +5076,8 @@ sub gst_network_get_interface_parse_table
        [ "auto",               \&gst_network_slackware91_get_auto,   [RC_INET, RC_LOCAL, IFACE]],
        [ "bootproto",          \&gst_network_slackware91_parse_bootproto, [RC_INET_CONF, IFACE]],
        [ "essid",              \&gst_parse_wireless_opts,            [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, ESSID ],
-       [ "key",                \&gst_parse_wireless_opts,            [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, KEY   ],
+       [ "key_type",           \&gst_network_get_wep_key_type,      [ \&gst_parse_wireless_opts, [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, KEY ]],
+       [ "key",                \&gst_network_get_wep_key,           [ \&gst_parse_wireless_opts, [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, KEY ]],
        [ "enabled",            \&gst_network_interface_active,       IFACE, \&gst_network_active_interfaces_get ],
        # Modem stuff
        [ "update_dns",         \&gst_network_check_type,            [IFACE, "modem", \&gst_parse_kw, PPP_OPTIONS, "usepeerdns" ]],
@@ -5059,7 +5125,8 @@ sub gst_network_get_interface_parse_table
        [ "enabled",            \&gst_network_interface_active,       IFACE, \&gst_network_active_interfaces_get ],
        [ "bootproto",          \&gst_network_parse_bootproto,        NET, "iface_%dev%" ],
        [ "essid",              \&gst_parse_wireless_opts,            [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, ESSID ],
-       [ "key",                \&gst_parse_wireless_opts,            [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, KEY   ],
+       [ "key_type",           \&gst_network_get_wep_key_type,       [ \&gst_parse_wireless_opts, [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, KEY ]],
+       [ "key",                \&gst_network_get_wep_key,            [ \&gst_parse_wireless_opts, [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, KEY ]],
        # modem stuff
        [ "update_dns",         \&gst_parse_sh_bool,                  PPPNET, PEERDNS ],
        [ "mtu",                \&gst_parse_sh,                       PPPNET, MTU ],
@@ -5665,6 +5732,7 @@ sub gst_network_get_interface_replace_table
         [ "gateway",            \&gst_replace_sh,      IFCFG, GATEWAY ],
         [ "essid",              \&gst_replace_sh,      IFCFG, ESSID ],
         [ "key",                \&gst_replace_sh,      IFCFG, KEY ],
+        [ "key_type",           \&gst_network_set_wep_key_type, [ \&gst_replace_sh, IFCFG, KEY, "%key%" ]],
         [ "update_dns",         \&gst_network_pump_set_nodns, PUMP, "%dev%", "%bootproto%" ],
         [ "update_dns",         \&gst_replace_sh_bool, IFCFG, PEERDNS ],
         [ "dns1",               \&gst_replace_sh,      IFCFG, DNS1 ],
@@ -5726,6 +5794,7 @@ sub gst_network_get_interface_replace_table
         [ "gateway",            \&gst_replace_sh,      IFCFG, GATEWAY ],
         [ "essid",              \&gst_replace_sh,      IFCFG, WIRELESS_ESSID ],
         [ "key",                \&gst_replace_sh,      IFCFG, WIRELESS_KEY   ],
+        [ "key_type",           \&gst_network_set_wep_key_type, [ \&gst_replace_sh, IFCFG, WIRELESS_KEY, "%key%" ]],
         [ "update_dns",         \&gst_network_pump_set_nodns, PUMP, "%dev%", "%bootproto%" ],
         [ "update_dns",         \&gst_replace_sh_bool, IFCFG, PEERDNS ],
         [ "dns1",               \&gst_replace_sh,      IFCFG, DNS1 ],
@@ -5785,6 +5854,7 @@ sub gst_network_get_interface_replace_table
         [ "gateway",            \&gst_replace_sh,      IFCFG, GATEWAY ],
         [ "essid",              \&gst_replace_sh,      IFCFG, ESSID ],
         [ "key",                \&gst_replace_sh,      IFCFG, KEY   ],
+        [ "key_type",           \&gst_network_set_wep_key_type, [ \&gst_replace_sh, IFCFG, KEY, "%key%" ]],
         [ "update_dns",         \&gst_network_pump_set_nodns, PUMP, "%dev%", "%bootproto%" ],
         [ "update_dns",         \&gst_replace_sh_bool, IFCFG, PEERDNS ],
         [ "dns1",               \&gst_replace_sh,      IFCFG, DNS1 ],
@@ -5844,6 +5914,7 @@ sub gst_network_get_interface_replace_table
         [ "gateway",            \&gst_replace_sh,      IFCFG, GATEWAY ],
         [ "essid",              \&gst_replace_sh,      IFCFG, WIRELESS_ESSID ],
         [ "key",                \&gst_replace_sh,      IFCFG, WIRELESS_KEY   ],
+        [ "key_type",           \&gst_network_set_wep_key_type, [ \&gst_replace_sh, IFCFG, WIRELESS_KEY, "%key%" ]],
         [ "update_dns",         \&gst_network_pump_set_nodns, PUMP, "%dev%", "%bootproto%" ],
         [ "update_dns",         \&gst_replace_sh_bool, IFCFG, PEERDNS ],
         [ "dns1",               \&gst_replace_sh,      IFCFG, DNS1 ],
@@ -5903,6 +5974,7 @@ sub gst_network_get_interface_replace_table
       [ "gateway",            \&gst_replace_sh,      IFCFG, GATEWAY ],
       [ "essid",              \&gst_replace_sh,      IFCFG, WIRELESS_ESSID ],
       [ "key",                \&gst_replace_sh,      IFCFG, WIRELESS_KEY ],
+      [ "key_type",           \&gst_network_set_wep_key_type, [ \&gst_replace_sh, IFCFG, WIRELESS_KEY, "%key%" ]],
       [ "update_dns",         \&gst_network_pump_set_nodns, PUMP, "%dev%", "%bootproto%" ],
       [ "update_dns",         \&gst_replace_sh_bool, IFCFG, PEERDNS ],
       [ "dns1",               \&gst_replace_sh,      IFCFG, DNS1 ],
@@ -6010,9 +6082,12 @@ sub gst_network_get_interface_replace_table
            [ "gateway",            \&gst_replace_interfaces_option_str,   [INTERFACES, IFACE], "gateway" ],
            [ "essid",              \&gst_replace_interfaces_option_str,   [INTERFACES, IFACE], "wireless-essid" ],
            [ "key",                \&gst_replace_interfaces_option_str,   [INTERFACES, IFACE], "wireless-key"   ],
+           [ "key_type",           \&gst_network_set_wep_key_type,        [ \&gst_replace_interfaces_option_str, INTERFACES, IFACE, "wireless-key", "%key%" ]],
            # ugly hack for deleting undesired options (due to syntax duality)
            [ "essid",              \&gst_replace_interfaces_option_str,   [INTERFACES, IFACE], "wireless_essid", "" ],
            [ "key",                \&gst_replace_interfaces_option_str,   [INTERFACES, IFACE], "wireless_key", ""   ],
+           [ "key",                \&gst_replace_interfaces_option_str,   [INTERFACES, IFACE], "wireless_key1", ""  ],
+           # End of hack
            [ "section",            \&gst_replace_interfaces_option_str,   [INTERFACES, IFACE], "provider" ],
            [ "remote_address",     \&gst_network_debian_replace_remote_address, [INTERFACES, IFACE]],
            # Modem stuff
@@ -6093,6 +6168,7 @@ sub gst_network_get_interface_replace_table
       [ "remote_address",     \&gst_replace_sh,                        IFCFG,   REMOTE_IPADDR  ],
       [ "essid",              \&gst_replace_sh,                        IFCFG,   WIRELESS_ESSID ],
       [ "key",                \&gst_replace_sh,                        IFCFG,   WIRELESS_KEY ],
+      [ "key_type",           \&gst_network_set_wep_key_type,          [ \&gst_replace_sh, IFCFG, WIRELESS_KEY, "%key%" ]],
       # Modem stuff goes here
       [ "serial_port",        \&gst_replace_sh,                        IFCFG,   MODEM_DEVICE   ],
       [ "serial_speed",       \&gst_replace_sh,                        IFCFG,   SPEED          ],
@@ -6186,6 +6262,7 @@ sub gst_network_get_interface_replace_table
       [ "auto",               \&gst_network_slackware91_set_auto,          [ RC_INET, RC_LOCAL, IFACE ] ],
       [ "essid",              \&gst_replace_wireless_opts,                 [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, ESSID ],
       [ "key",                \&gst_replace_wireless_opts,                 [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, KEY   ],
+      [ "key_type",           \&gst_network_set_wep_key_type, [ \&gst_replace_wireless_opts, [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, KEY, "%key%" ]],
       # Modem stuff
       [ "phone_number",       \&gst_network_check_type,                   [IFACE, "modem", \&gst_network_create_pppscript, CHAT ]],
       [ "phone_number",       \&gst_network_check_type,                   [IFACE, "modem", \&gst_network_slackware91_create_pppgo ]],
@@ -6235,6 +6312,7 @@ sub gst_network_get_interface_replace_table
       [ "remote_address",     \&gst_replace_sh_re,                    NET, "iface_%dev%", "[ \t]+dest_address[ \t]+[0-9\.]*", " dest_address %remote_address%" ],
       [ "essid",              \&gst_replace_wireless_opts,            [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, ESSID ],
       [ "key",                \&gst_replace_wireless_opts,            [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, KEY   ],
+      [ "key_type",           \&gst_network_set_wep_key_type,         [ \&gst_replace_wireless_opts, [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, KEY, "%key%" ]],
       # modem stuff
       [ "dev",                \&gst_network_check_type,              [ IFACE, "modem", \&gst_replace_sh, PPPNET, PEER ]],
       [ "update_dns",         \&gst_network_check_type,              [ IFACE, "modem", \&gst_replace_sh_bool, PPPNET, PEERDNS ]],
